...
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/booster_4_text"
        app:layout_constraintStart_toEndOf="@+id/booster_3_text"
        app:layout_constraintTop_toBottomOf="@+id/booster_4_text" />

    <TextView
        android:id="@+id/booster_1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/last_5_min_200_gold"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/booster_3_image"
        app:layout_constraintEnd_toStartOf="@+id/booster_2_image"
        app:layout_constraintStart_toStartOf="@+id/booster_1_image" />

    <TextView
        android:id="@+id/booster_2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/last_10_min_380_gold"
...
