...
        android:layout_marginBottom="8dp"
        android:text="@string/shop"
        app:layout_constraintTop_toBottomOf="@id/bank_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/my_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/my_profile"
...
        android:layout_marginEnd="8dp"
        android:text="@string/bank"
        app:layout_constraintTop_toBottomOf="@id/my_profile_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_button" />

    <TextView
        android:id="@+id/booster_timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_light"
        android:textColor="@android:color/holo_green_dark"
...
